# ChangeLog for dev-util/qdevelop
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/qdevelop/ChangeLog,v 1.8 2009/10/05 19:56:10 ayoy Exp $

  05 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> qdevelop-0.25-r1.ebuild,
  qdevelop-0.26.1.ebuild:
  Removed alternative dependency on Qt metapackage, switched to EAPI=2 for
  0.25-r1 and fixed other minor issues

*qdevelop-0.26.1 (31 Jan 2009)

  31 Jan 2009; <jokey@gentoo.org> +qdevelop-0.26.1.ebuild:
  Version bump wrt bug 250618 thanks to Markos Chandras for the new ebuild

  23 Jul 2008; Peter Alfredsen <loki_val@gentoo.org>
  +files/qdevelop-0.25-gcc43.patch, qdevelop-0.25-r1.ebuild:
  Fix for gcc-4.3, bug #222507. Thanks to Dennis Schridde
  <lindevel@gmx.net>.

  09 Apr 2008; Ingmar Vanhassel <ingmar@gentoo.org> qdevelop-0.25-r1.ebuild:
  Make dependencies compatible with split Qt:4.

  31 Jan 2008; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Keyword testing for amd64

  05 Jan 2008; Markus Meier <maekke@gentoo.org> qdevelop-0.25-r1.ebuild:
  x86 stable, bug #202254

*qdevelop-0.25-r1 (14 Dec 2007)

  14 Dec 2007; Markus Ullmann <jokey@gentoo.org> +files/qdevelop.desktop,
  -qdevelop-0.25.ebuild, +qdevelop-0.25-r1.ebuild:
  Add icon and desktop entry for bug #135380 thanks to Marek Hakala

*qdevelop-0.25 (14 Dec 2007)

  14 Dec 2007; Markus Ullmann <jokey@gentoo.org> +metadata.xml,
  +qdevelop-0.25.ebuild:
  Initial import from sunrise overlay

  11 Dec 2007; Markus Ullmann <jokey@gentoo.org> +qdevelop-0.25:
  Version bump

  11 Dec 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Version bump and SRC_URI fix

  04 Dec 2007; Jakub Moc <jakub@gentoo.org> qdevelop-0.23.ebuild:
  Switch to EAPI-1 and slotted deps

  04 Aug 2007; Jakub Moc <jakub@gentoo.org> qdevelop-0.23.ebuild:
  Use pkg_setup from qt4 eclass for built_with_use check

  04 Aug 2007; Jakub Moc <jakub@gentoo.org> qdevelop-0.23.ebuild:
  Use eqmake4 from qt4 eclass
