@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/qdevelop
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/qdevelop/ChangeLog,v 1.8 2009/10/05 19:56:10 ayoy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/qdevelop/ChangeLog,v 1.9 2009/11/16 15:22:55 spatz Exp $
+
+*qdevelop-0.27.4 (16 Nov 2009)
+
+  16 Nov 2009; Dror Levin <spatz@gentoo.org> +qdevelop-0.27.4.ebuild:
+  Version bump, bug 280908. Thanks to David Baribeault.
 
   05 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> qdevelop-0.25-r1.ebuild,
   qdevelop-0.26.1.ebuild:
